# aimp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.bench  FEATURES.md  Makefile  README.md  SECURITY.md  SPEC.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
aimp_node/: .gitignore  Cargo.toml
aimp_node/benches/: core.rs  epistemic.rs
aimp_node/docs/adr/: 001-merkle-dag-crdt.md  002-epoch-gc.md
aimp_node/examples/: bench_batch_multinode.rs  bench_batch_signing.rs  bench_belief_scale.rs  bench_convergence.rs  bench_delta_sync.rs  bench_l3_netem.rs  bench_memory_wall.rs  bench_netem.rs  bench_revocation.rs  bench_stress.rs  compare_subjective_logic.rs  profile_epistemic.rs  profile_mutation.rs
aimp_node/proptest-regressions/crdt/: merkle_dag.txt  tests.txt
aimp_node/src/: ai_bridge.rs  config.rs  decision_engine.rs  epistemic.rs  error.rs  event.rs  lib.rs  main.rs  semantic_topology.rs
aimp_node/src/crdt/: actor.rs  arena.rs  consensus.rs  gc.rs  merkle_dag.rs  mod.rs  store.rs
aimp_node/src/crypto/: identity.rs  mod.rs  verifier.rs
aimp_node/src/dashboard/: mod.rs
aimp_node/src/event/: metrics.rs
aimp_node/src/network/: mod.rs  security.rs
aimp_node/src/protocol/: de_ser.rs  envelope.rs  mod.rs
aimp_node/tests/: epistemic_proptests.rs  exhaustive_belief.rs  integration.rs
aimp_testbed/: .gitignore  chaos_client.py  requirements.txt  setup.py
aimp_testbed/aimp_client/: __init__.py  cli.py  client.py
benchmarks/: Cargo.toml  bench_system.py  compare_automerge.rs  docker-compose.yml  run_all.sh  run_epistemic.sh
benchmarks/results/: automerge_raw.txt  convergence_raw.txt  criterion_raw.txt  environment.json  epistemic_hotpath_raw.txt  epistemic_scale_raw.txt  l3_netem_raw.txt  netem_raw.txt  profile_raw.txt  proptest_summary.txt  revocation_raw.txt  subjective_logic_comparison.txt
demo/: README.md
demo/01_iot_sensor_mesh/: README.md  simulate.py
demo/02_crdt_convergence/: README.md  index.html
demo/03_wildfire_alert/: README.md  simulate.py
demo/04_ai_rule_engine/: README.md  repl.py  rules.json
demo/05_disaster_response/: README.md  index.html
demo/06_cold_chain/: README.md  simulate.py
demo/07_robot_fleet/: README.md  index.html
demo/08_quorum_consensus/: README.md  simulate.py
deploy/: install.sh
deploy/firecracker/: build-rootfs.sh  vm-config.json
deploy/systemd/: aimp.env  (+1 more)
docs/: references.yml  whitepaper.typ
formal/: AimpBeliefConvergence.cfg  AimpBeliefConvergence.tla  AimpCrdtConvergence-3nodes-3mut.cfg  AimpCrdtConvergence-3nodes.cfg  AimpCrdtConvergence.cfg  AimpCrdtConvergence.tla
scripts/: version_manager.sh
v0.2.0/: AIMP-l3-epistemic-layer.typ  DESIGN.md  PLAN_REVIEW.md  PROMPT_FOR_CHATGPT.md  PROMPT_FOR_GEMINI.md  epistemic.rs  paper.typ  references.yml
v0.3.0/: AIMP-v030-correlation-aware.typ  references.yml
v0.4.0/: AIMP-v040-semantic-topologies.typ  references.yml
