[package]
name = "aimp_node"
version = "0.1.0"
edition = "2021"
authors = ["AIMP Protocol Contributors"]
description = "Reference implementation of the AI Mesh Protocol (Merkle-CRDT, Epoch GC)"

[dependencies]
# 1. CORE & ASYNC: Non-blocking engine
tokio = { version = "1.36", features = ["full"] }

# 2. SERIALIZATION: Zero-alloc binary translation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"      # For deterministic AI output handling
rmp-serde = "1.1"       # MessagePack: binary compression
serde-big-array = "0.5" # Handle signatures > 32 bytes
serde_repr = "0.1"      # Force integer enums
serde_bytes = "0.11"    # Force Bin format for [u8; N]

# 3. CRYPTOGRAPHY & HASHING: Zero-Trust and Merkle-DAG hashes
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ring = { version = "0.17", optional = true }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
blake3 = "1.5"


# 5. OBSERVABILITY & TELEMETRY: Aerospace-grade non-blocking logging
tracing = "0.1"         
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 6. MEMORY & CONCURRENCY: Lock-free and granular state handling
dashmap = "5.5"         # Blazing fast concurrent HashMap for CRDT state
bytes = "1.5"           # Zero-alloc byte manipulation for the UDP hot-path
slab = "0.4"            # Pre-allocated memory for high-frequency nodes
redb = "2.4"            # Actively maintained embedded database for durability
smallvec = { version = "1.13", features = ["serde"] }  # Stack-allocated small vectors
rustc-hash = "2.1"      # FxHash: fast non-crypto hash for internal maps
mimalloc = { version = "0.1", optional = true }  # High-perf allocator

# 7. UTILITY
hex = "0.4"
thiserror = "1.0"       # Elegant, zero-panic error handling
ratatui = "0.26"
crossterm = { version = "0.27", features = ["events"] }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
prometheus = "0.13"     # Industrial metrics
axum = "0.7"            # Lightweight HTTP for metrics scraping
once_cell = "1.18"      # Global metrics initialization
config = "0.13"         # Dynamic configuration
snow = "0.9"            # Noise Protocol for encrypted hot-path

[features]
default = []
fast-crypto = ["ring"]
fast-alloc = ["mimalloc"]

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core"
harness = false
